--- a/ShellcodeVM/ShellcodeVM.vcxproj.filters
+++ b/ShellcodeVM/ShellcodeVM.vcxproj.filters
@@ -95,6 +95,9 @@
     <ClCompile Include="WinMiniDump.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="MiniDump.dmp" />
